--- a/shadowrocket/remove_adrules.conf
+++ b/shadowrocket/remove_adrules.conf
@@ -1,5 +1,5 @@
 [General]
-dns-server =  https://dns.alidns.com/dns-query, https://doh.pub/dns-query
+dns-server =  https://doh.pub/dns-query, https://dns.alidns.com/dns-query
 bypass-tun = 0.0.0.0/8, 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 skip-proxy = localhost, *.local, captive.apple.com, 0.0.0.0/8, 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 240.0.0.0/4, 255.255.255.255/32
 bypass-system = true
@@ -137,6 +137,9 @@ DOMAIN-SUFFIX,amazonaws.com,PROXY
 DOMAIN-SUFFIX,amazonvideo.com,PROXY
 DOMAIN-SUFFIX,llnwd.net,PROXY
 DOMAIN-SUFFIX,primevideo.com,PROXY
+DOMAIN-SUFFIX,media-amazon.com,PROXY
+DOMAIN,atv-ps.amazon.com,PROXY
+DOMAIN,fls-na.amazon.com,PROXY
 
 # > Apple News and Apple Map TOMTOM Version
 # USER-AGENT,AppleNews*,PROXY
@@ -313,7 +316,17 @@ USER-AGENT,Argo*,PROXY
 DOMAIN-KEYWORD,netflix,PROXY
 DOMAIN,netflix.com.edgesuite.net,PROXY
 DOMAIN-SUFFIX,netflix.com,PROXY
+DOMAIN-SUFFIX,netflix.com.edgesuite.net,PROXY
 DOMAIN-SUFFIX,netflix.net,PROXY
+DOMAIN-SUFFIX,netflixdnstest0.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest1.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest2.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest3.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest4.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest5.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest6.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest7.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest8.com,PROXY
 DOMAIN-SUFFIX,nflxext.com,PROXY
 DOMAIN-SUFFIX,nflximg.com,PROXY
 DOMAIN-SUFFIX,nflximg.net,PROXY
@@ -1252,6 +1265,11 @@ DOMAIN-SUFFIX,storage.msn.com,PROXY
 DOMAIN-SUFFIX,windows.net,PROXY
 DOMAIN-SUFFIX,xbox.com,PROXY
 DOMAIN-SUFFIX,xboxlive.com,PROXY
+
+# > Riot Games
+DOMAIN-SUFFIX,riotcdn.net,PROXY
+DOMAIN-SUFFIX,wr.pvp.net,PROXY
+DOMAIN-SUFFIX,riotgames.com,PROXY
 
 # > Sony
 DOMAIN-SUFFIX,playstation.com,PROXY
